# omop-sql-partitioner

./: README.md  pyproject.toml  requirements.txt
ddl/: remote_db_structure.sql  source_schema.sql
omop_partitioner/: __init__.py  cleanup.py  cli.py  distribution_strategies.py  omop_healthcheck.py  spin_and_import.py  sql_export.py  sql_partitioner.py
