[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "omop-partitioner"
version = "1.0.0"
description = "A comprehensive Python-based tool for partitioning OMOP databases by generating SQL files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Narasimha Raghavan", email = "vnragavan@protonmail.com"},
]
maintainers = [
    {name = "Narasimha Raghavan", email = "vnragavan@protonmail.com"},
]
keywords = ["omop", "database", "partitioning", "postgresql", "healthcare", "medical", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "networkx>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
omop-partitioner = "omop_partitioner.cli:main"
omop-sql-partitioner = "omop_partitioner.sql_partitioner:main"
omop-cleanup = "omop_partitioner.cleanup:main"

[project.urls]
Homepage = "https://github.com/vnragavan/omop-partitioner"
Documentation = "https://github.com/vnragavan/omop-partitioner#readme"
Repository = "https://github.com/vnragavan/omop-partitioner"
"Bug Tracker" = "https://github.com/vnragavan/omop-partitioner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["omop_partitioner*"]

[tool.setuptools.package-data]
omop_partitioner = ["*.md", "*.txt", "*.yaml", "*.yml", "ddl/*.sql"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
